force-app/main/default/objects/Bus__c/Bus__c.object-meta.xml
<CustomObject>
    <description>Contains attributes describing a bus.</description>
    <label>Bus</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Bus Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>