force-app/main/default/objects/Bus__c/fields/Bus_Picture__c.field-meta.xml
<CustomField>
    <fullName>Bus_Picture__c</fullName>
    <inlineHelpText>Picture of the bus.</inlineHelpText>
    <label>Bus Picture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>