force-app/main/default/objects/Bus__c/fields/Last_Reported_Location__c.field-meta.xml
<CustomField>
    <fullName>Last_Reported_Location__c</fullName>
    <inlineHelpText>The last reported location of the bus.</inlineHelpText>
    <label>Last Reported Location</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>