force-app/main/default/objects/Bus__c/fields/Last_Reported_Location_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Last_Reported_Location_Latitude__c</fullName>
    <inlineHelpText>The bus location latitude the last time it was reported.</inlineHelpText>
    <label>Last Reported Location Latitude</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>