force-app/main/default/objects/Bus__c/fields/Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Model_Year__c</fullName>
    <inlineHelpText>The model year of the bus.</inlineHelpText>
    <label>Model Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>