force-app/main/default/objects/Bus__c/fields/Odometer_Reading__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Reading__c</fullName>
    <inlineHelpText>The most recently recorded odometer reading.</inlineHelpText>
    <label>Odometer Reading</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>