force-app/main/default/objects/Bus__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>The bus status.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready for Use</fullName>
            </value>
            <value>
                <fullName>Scheduled for Maintenance</fullName>
            </value>
            <value>
                <fullName>Undergoing Repairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>